[package]
name = "CCBPlusTree"
version = "0.0.120"
edition = "2021"
authors = ["Amir El-Shaikh <elshaikh@mathematik.uni-marburg.de>"]
description = "Experimental Concurrency Control CRUD B+Tree Implementation"
repository = "https://github.com/umr-dbs/CC-BPlusTree"

[lib]
#name = "CCBPlusTree"
#path = "src/lib.rs"
#crate-type = ["cdylib"]

[profile.dev]
overflow-checks = false

[profile.release]
overflow-checks = false

[features]
olc-hle = []
orwc-fair = []
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.40"
rand = "0.9.0"
num_cpus = "1.16.0"
itertools = "0.14.0"
parking_lot = { version = "0.12.3", features = ["hardware-lock-elision"] }
serde = { version ="1.0.219", features = ["derive", "rc"] }
[target.'cfg(target_os = "linux")'.dependencies]
libc = "0.2.171"
sysinfo = "0.33.1"
raw-cpuid = "11.1.0"